agregar POJO con elementos de properties
agregar POJO con elementos de properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,7 @@ server.servlet.context-path=/app
 value.name=y
 value.lastname=f
 value.random=${random.value}
+
+user.email=test@gfhfg.com
+user.password=4321
+user.age=30
