--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,7 @@ value.random=${random.value}
 user.email=test@gfhfg.com
 user.password=4321
 user.age=30
+
+logging.level.root= info
+logging.level.org.springframework.web=info
+logging.level.org.hibernate=error
