--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,6 @@ user.email=test@gfhfg.com
 user.password=4321
 user.age=30
 
-logging.level.root= info
+logging.level.root= error
 logging.level.org.springframework.web=info
 logging.level.org.hibernate=error
