--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ user.email=test@gfhfg.com
 user.password=4321
 user.age=30
 
-logging.level.root= error
+logging.level.root= info
 logging.level.org.springframework.web=info
 logging.level.org.hibernate=error
 
